--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="navigation-bar">
       <div class="logo">
-        <a href="#"><img src="/images/kaduna-img.jpg" alt="Kaduna state" class="logo-icon"></a>
+        <a href="/"><img src="/images/kaduna-img.jpg" alt="Kaduna state" class="logo-icon"></a>
       </div>
       <nav>
         <div class="fsnav">
@@ -47,11 +47,12 @@
         <p class="greeting-paragraph">"Hello! Security is everyone responsibility"</p>
         <h1>Kaduna State Security Summit 2021</h1>
         <p class="intro-paragraph">
-          A joyful celebration believeing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.
+          The 3rd edition of the Security Summit is scheduled on November 7 - 9, 2021. Amidst the rapidly changing digitization landscape and the highly volatile cyberspace, it becomes important to stay current on the present context and anticipate the challenges in the offing.
+          Kaduna state security summit agenda is typically characterized by presence of a diverse set of themes, sub themes, topics and sub-topics, multiple tracks, varied session formats and plethora of activities and experiences that make up for a rich three-day engagement and learning for the delegates.
         </p>
         <div class="welcome-venue">
-          <h3>2015.10.15(THU) ~ 16(FRI)</h3>
-          <p>@ National Museum of Korea. Art center   Nabi and more
+          <h3>2021.11.7(MON) ~ 9(WED)</h3>
+          <p>@ Divino Events Centre. Barnawa, Kaduna Nigeria
           </p>
         </div>
       </div>
@@ -62,57 +63,57 @@
       <div class="program-content">
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/check-img.jpg" alt="">
+            <img src="/images/governance.png" alt="governance">
           </div>
           <div class="program-content-title">
-            <h4>Lecture</h4>
+            <h4>Governance, when liabilities are raising</h4>
           </div>
           <div class="program-content-info">
-            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
+            <p>Bringing An Adaptive Trust Mindset To Data, and life Protection</p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/check-img.jpg" alt="">
+            <img src="/images/frictionless.png" alt="frictionless">
           </div>
           <div class="program-content-title">
-            <h4>CC Exhibition</h4>
+            <h4>Makng Security Frictionless</h4>
           </div>
           <div class="program-content-info">
-            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
+            <p>Assumption based Security to Validation by Intelligence based Security</p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/check-img.jpg" alt="">
+            <img src="/images/individual-crime.png" alt="Individual">
           </div>
           <div class="program-content-title">
-            <h4>Forum</h4>
+            <h4>Digital Crimes: Against individual and Society</h4>
           </div>
           <div class="program-content-info">
-            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
+            <p>Institutionalizing An Adaptive Trust Approach to Modern Cyber Risks - Making it Real</p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/check-img.jpg" alt="">
+            <img src="/images/cdc.png" alt="cdc">
           </div>
           <div class="program-content-title">
-            <h4>Workshop</h4>
+            <h4>CDC: Exellence in the Security Operations</h4>
           </div>
           <div class="program-content-info">
-            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
+            <p>Design, technology taxonomy, expertise, transition & assuring operational excellence</p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            <img src="/images/check-img.jpg" alt="">
+            <img src="/images/resilency.png" alt="resilency">
           </div>
           <div class="program-content-title" class="program-content-img">
-            <h4>CC Ignite</h4>
+            <h4>Resiliency for Radically Uncertain Age</h4>
           </div>
           <div class="program-content-info">
-            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
+            <p>Visibility, asset discovery, patch management, CTD, and SRA </p>
           </div>
         </div>
       </div>
@@ -126,60 +127,60 @@
       <div class="featured-speaker-content">
         <div class="featured-speaker-card">
           <div class="featured-speaker-image">
-            <img src="/images/speaker.jpg" alt="speaker">
+            <img src="/images/sridhar.jpg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h6>John Walter</h6>
+            <h6>Udbhav Tiwari</h6>
             <p class="featured-speaker-title">
-              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+              Minister of Communication
             </p>
             <p class="featured-speaker-detail">
-              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+              Udbhav Tiwari is the minister of communication of Federal Republic of Nigeria.
             </p>
           </div>
         </div>
 
         <div class="featured-speaker-card">
           <div class="featured-speaker-image">
-            <img src="/images/speaker.jpg" alt="speaker">
+            <img src="/images/subhas.jpg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h6>John Walter</h6>
+            <h6>Vidur Gupta</h6>
             <p class="featured-speaker-title">
-              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+              Founder & CMO, Indusface
             </p>
             <p class="featured-speaker-detail">
-              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+              Vidur Gupta is the founder and CMO of Indusface security.
             </p>
           </div>
         </div>
 
         <div class="featured-speaker-card">
           <div class="featured-speaker-image">
-            <img src="/images/speaker.jpg" alt="speaker">
+            <img src="/images/subhashish.jpg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h6>John Walter</h6>
+            <h6>James Oche</h6>
             <p class="featured-speaker-title">
-              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+              President, Nigeria SME Forum
             </p>
             <p class="featured-speaker-detail">
-              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+              James Oche is the President, Nigeria SME forum Nigeria
             </p>
           </div>
         </div>
 
         <div class="featured-speaker-card">
           <div class="featured-speaker-image">
-            <img src="/images/speaker.jpg" alt="speaker">
+            <img src="/images/attahiru.jpeg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h6>John Walter</h6>
+            <h6>Visagan Subburayalu</h6>
             <p class="featured-speaker-title">
-              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+              Director of Technology Target
             </p>
             <p class="featured-speaker-detail">
-              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+              Visagan Subburayalu is the Director of Technology Target limited.
             </p>
           </div>
         </div>
@@ -193,11 +194,12 @@
       <div class="footer-partner">
         <h4>Partner</h4>
         <ul class="footer-partner-list">
-          <li><a href="#">Mozzilla</a></li>
-          <li><a href="#">Google</a></li>
-          <li><a href="#">Naver</a></li>
-          <li><a href="#">Daumkakao</a></li>
-          <li><a href="#">Airbnb</a></li>
+          <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
+          <li><a href="#"><img src="/images/microsoft.png" alt="microsoft"></a></li>
+          <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
+          <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
+          <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="/images/pwc.png" alt="vmware"></a></li>
         </ul>
       </div>
       <div class="footer-foot">
