--- a/views/about.html
+++ b/views/about.html
@@ -45,22 +45,23 @@
     <section id="welcome" class="welcome">
       <div class="welcome-content">
         <p class="greeting-paragraph-about">"Hello! Sharing world"</p>
-        <h2>CREACTIVE COMMONS GLOBAL SUMMIT 2015</h2>
+        <h2>Kaduna State Security Summit 2021</h2>
         <p class="intro-paragraph-about">
-          A joyful celebration believeing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.
+          The 3rd edition of the Security Summit is scheduled on November 7 - 9, 2021. Amidst the rapidly changing digitization landscape and the highly volatile cyberspace, it becomes important to stay current on the present context and anticipate the challenges in the offing.
+          Kaduna state security summit agenda is typically characterized by presence of a diverse set of themes, sub themes, topics and sub-topics, multiple tracks, varied session formats and plethora of activities and experiences that make up for a rich three-day engagement and learning for the delegates.
         </p>
         <div class="welcome-content-contact">
           <p>Please contact us per Email for any further questions about CC Global Submit 2015!</p>
           <h4>
-            ccsummit@cckorea.org
+            kadunasecurity@summit2021.org
           </h4>
         </div>
       </div>
     </section>
     
     <section id="program" class="program-about">
-      <h5>Creative Commons Globals Summit 2015 Logo</h5>
-      <p>The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7 July</p>
+      <h5>Kaduna State Security Summit 2021</h5>
+      <p>Kaduna State is a state in northern Nigeria. The state was created on 27th Many, 1967</p>
       <div class="program-about-logo">
         <img src="/images/kaduna-img.jpg" alt="kaduna state" class="logo-icon">
         <p>14th - 17th Oct 2015 | Emmanuel, Nigeria</p>
@@ -68,26 +69,29 @@
     </section>
     
     <section id="featured-speaker" class="featured-speaker-about">
-      <h3>See the past CC Global Summits</h3>
-      <p>Take a look at the last two CC Global Sunnits which took place in Bueenos Aires and in Warsaw.</p>
+      <h3>See the past security summit</h3>
+      <p>Take a look at the last two security summit which took place in Abuja and in Lagos.</p>
+      <div class="pass-summit">
       <div class="past-summit-images">
-        <img src="/images/past-summit-1.jpeg" alt="Abuja 2020" style="width:100%;">
+        <img src="/images/past-summit-2.jpg" alt="Abuja 2020" style="width:100%;">
         <div class="centered">Abuja Security summit 2020</div>
       </div>
       <div class="past-summit-images">
-        <img src="/images/past-summit-1.jpeg" alt="Abuja 2020" style="width:100%;">
-        <div class="centered">Abuja Security summit 2020</div>
+        <img src="/images/past-summit-3.jpg" alt="Lagos 2019" style="width:100%;">
+        <div class="centered">Lagos Security summit 2019</div>
       </div>
+    </div>
     </section>    
     <footer>
       <div class="footer-partner">
         <h4>Partner</h4>
         <ul class="footer-partner-list">
-          <li><a href="#">Mozzilla</a></li>
-          <li><a href="#">Google</a></li>
-          <li><a href="#">Naver</a></li>
-          <li><a href="#">Daumkakao</a></li>
-          <li><a href="#">Airbnb</a></li>
+          <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
+          <li><a href="#"><img src="/images/microsoft.png" alt="microsoft"></a></li>
+          <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
+          <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
+          <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
+          <li><a href="#"><img src="/images/pwc.png" alt="vmware"></a></li>
         </ul>
       </div>
       <div class="footer-foot">
