--- a/views/about.html
+++ b/views/about.html
@@ -73,11 +73,11 @@
       <p>Take a look at the last two security summit which took place in Abuja and in Lagos.</p>
       <div class="pass-summit">
       <div class="past-summit-images">
-        <img src="/images/past-summit-2.jpg" alt="Abuja 2020" style="width:100%;">
+        <img src="/images/past-summit-2.jpg" alt="Abuja 2020">
         <div class="centered">Abuja Security summit 2020</div>
       </div>
       <div class="past-summit-images">
-        <img src="/images/past-summit-3.jpg" alt="Lagos 2019" style="width:100%;">
+        <img src="/images/past-summit-3.jpg" alt="Lagos 2019">
         <div class="centered">Lagos Security summit 2019</div>
       </div>
     </div>
