--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
           <div class="program-content-image">
             <img src="/images/resilency.png" alt="resilency">
           </div>
-          <div class="program-content-title" class="program-content-img">
+          <div class="program-content-title">
             <h4>Resiliency for Radically Uncertain Age</h4>
           </div>
           <div class="program-content-info">
@@ -125,67 +125,7 @@
     <section id="featured-speaker" class="featured-speaker">
       <h3>Featured Speaker</h3>
       <div class="featured-speaker-content">
-        <div class="featured-speaker-card">
-          <div class="featured-speaker-image">
-            <img src="/images/sridhar.jpg" alt="speaker">
-          </div>
-          <div class="featured-speaker-info">
-            <h6>Udbhav Tiwari</h6>
-            <p class="featured-speaker-title">
-              Minister of Communication
-            </p>
-            <p class="featured-speaker-detail">
-              Udbhav Tiwari is the minister of communication of Federal Republic of Nigeria.
-            </p>
-          </div>
-        </div>
-
-        <div class="featured-speaker-card">
-          <div class="featured-speaker-image">
-            <img src="/images/subhas.jpg" alt="speaker">
-          </div>
-          <div class="featured-speaker-info">
-            <h6>Vidur Gupta</h6>
-            <p class="featured-speaker-title">
-              Founder & CMO, Indusface
-            </p>
-            <p class="featured-speaker-detail">
-              Vidur Gupta is the founder and CMO of Indusface security.
-            </p>
-          </div>
-        </div>
-
-        <div class="featured-speaker-card">
-          <div class="featured-speaker-image">
-            <img src="/images/subhashish.jpg" alt="speaker">
-          </div>
-          <div class="featured-speaker-info">
-            <h6>James Oche</h6>
-            <p class="featured-speaker-title">
-              President, Nigeria SME Forum
-            </p>
-            <p class="featured-speaker-detail">
-              James Oche is the President, Nigeria SME forum Nigeria
-            </p>
-          </div>
-        </div>
-
-        <div class="featured-speaker-card">
-          <div class="featured-speaker-image">
-            <img src="/images/attahiru.jpeg" alt="speaker">
-          </div>
-          <div class="featured-speaker-info">
-            <h6>Visagan Subburayalu</h6>
-            <p class="featured-speaker-title">
-              Director of Technology Target
-            </p>
-            <p class="featured-speaker-detail">
-              Visagan Subburayalu is the Director of Technology Target limited.
-            </p>
-          </div>
-        </div>
       </div>
-      
       <div class="dropdown">
         More <i class="arrow down"></i>
       </div>
