--- a/views/about.html
+++ b/views/about.html
@@ -26,11 +26,11 @@
       <nav>
         <div class="fsnav">
           <button type="button" class="fsnav-close">&times;</button>
+          <a href="index.html" class="fsnav-link" id="#news">Home</a>
           <a href="about.html" class="fsnav-link" id="#about">About</a>
           <a href="#" class="fsnav-link" id="#program">Program</a>
           <a href="#" class="fsnav-link" id="#join">Join</a>
           <a href="#" class="fsnav-link" id="#sponsor">Sponsor</a>
-          <a href="#" class="fsnav-link" id="#news">News</a>
           <a href="#" class="fsnav-link" id="#cc-campaign">Security Awareness</a>
         </div>
         <div class="menu" onclick="openNav()">
@@ -44,7 +44,7 @@
   <div class="section-wrapper">
     <section id="welcome" class="welcome">
       <div class="welcome-content">
-        <p class="greeting-paragraph-about">"Hello! Sharing world"</p>
+        <p class="greeting-paragraph-about">"Hello! Security is everyone responsibility"</p>
         <h2>Kaduna State Security Summit 2021</h2>
         <p class="intro-paragraph-about">
           The 3rd edition of the Security Summit is scheduled on November 7 - 9, 2021. Amidst the rapidly changing digitization landscape and the highly volatile cyberspace, it becomes important to stay current on the present context and anticipate the challenges in the offing.
@@ -87,7 +87,7 @@
         <h4>Partner</h4>
         <ul class="footer-partner-list">
           <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
-          <li><a href="#"><img src="/images/microsoft.png" alt="microsoft"></a></li>
+          <li><a href="#"><img src="/images/fb.webp" alt="microsoft"></a></li>
           <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
           <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
           <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
