--- a/views/index.html
+++ b/views/index.html
@@ -26,11 +26,11 @@
       <nav>
         <div class="fsnav">
           <button type="button" class="fsnav-close">&times;</button>
+          <a href="index.html" class="fsnav-link" id="#news">Home</a>
           <a href="about.html" class="fsnav-link" id="#about">About</a>
           <a href="#" class="fsnav-link" id="#program">Program</a>
           <a href="#" class="fsnav-link" id="#join">Join</a>
           <a href="#" class="fsnav-link" id="#sponsor">Sponsor</a>
-          <a href="#" class="fsnav-link" id="#news">News</a>
           <a href="#" class="fsnav-link" id="#cc-campaign">Security Awareness</a>
         </div>
         <div class="menu" onclick="openNav()">
@@ -135,7 +135,7 @@
         <h4>Partner</h4>
         <ul class="footer-partner-list">
           <li><a href="#"><img src="/images/google.png" alt="google"></a></li>
-          <li><a href="#"><img src="/images/microsoft.png" alt="microsoft"></a></li>
+          <li><a href="#"><img src="/images/fb.webp" alt="microsoft"></a></li>
           <li><a href="#"><img src="/images/First-Bank.svg" alt="first bank"></a></li>
           <li><a href="#"><img src="/images/cisco.png" alt="cisco"></a></li>
           <li><a href="#"><img src="/images/vmware.png" alt="vmware"></a></li>
